server/kubernetes/ingress/upload.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-os-user-uploading
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: uploading
    spec:
      containers:
      - name: os-user-uploading
        image: canaantt/oncoscape-data-upload:v5
        imagePullPolicy: "Always"
        ports:
        - name: upload-port
          containerPort: 7776
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: upload-port
    protocol: TCP
    name: http
  selector:
    app: uploading
